# block_mesh_bgm

./: Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md
benches/: bench.rs
examples/: profile_phases.rs
examples_crate/: Cargo.toml
examples_crate/ambient_occlusion/: main.rs
examples_crate/custom_meshing/: main.rs
examples_crate/merge_modes/: main.rs
examples_crate/render/: main.rs
examples_crate/src/: lib.rs
src/: ao.rs  context.rs  face.rs  lib.rs  merge.rs  merge_modes.rs  prep.rs  profile.rs
tests/: AO_binary_tests.md  ao_profile.rs  compat.rs  stage_profile.rs
